# SCFusion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt
App/Map2Mesh/: CMakeLists.txt  exe_Map2Mesh.cpp
App/SCFusion/: CMakeLists.txt  main_gui_infinitam.cpp  main_infinitam.cpp
App/TrainingDataGenerator/: CMakeLists.txt  JsonUtils.h  Scan2CADAnnotionLoader.h  Scan2CADObjectLoader.cpp  Scan2CADObjectLoader.h  ScanNetMeshLoader.cpp  ScanNetMeshLoader.h  ScanNetScan2CADLoader.cpp  ScanNetScan2CADLoader.h  ScanNetScan2CAD_SceneToSkip.h  TrainingDataGenerator.cu  TrainingDataGenerator.h  TrainingDataGeneratorInstantiation.cu  assimp_obj_loader.cpp  assimp_obj_loader.h  exe_GroundtruthGenerator_ScanNetScan2CAD.cpp  exe_TrainingDataGenerator_ScanNetScan2CAD.cpp  loadCloud2Array.hpp
App/extractPoseFromScanNet/: CMakeLists.txt  main.cpp
App/rotation/: CMakeLists.txt  pclloader.hpp  rotmesh.cpp
ConnectedComponent/: CMakeLists.txt  exe_cc.cpp
ConnectedComponent/ConnectedComponent/CPU/: ConnectedComponent_CPU.h
ConnectedComponent/ConnectedComponent/CUDA/: ConnectedComponent_CUDA.h  ConnectedComponent_CUDA.tcu
ConnectedComponent/ConnectedComponent/Interface/: ConnectedComponent.h
ConnectedComponent/ConnectedComponent/Shared/: ConnectedComponent_shared.h  disjointSet.h
DenseCRF/: CMakeLists.txt
DenseCRF/test/: CMakeLists.txt  test.cpp
FernRelocLib/: CMakeLists.txt  FernConservatory.cpp  PoseDatabase.cpp  RelocDatabase.cpp  Relocaliser.cpp
FernRelocLib/include/FernRelocLib/: FernConservatory.h  PixelUtils.h  PoseDatabase.h  Relocaliser.h
ImageLoader/: CMakeLists.txt
ImageLoader/CPU/: RIO.hpp  ScanNet.hpp  ScanNetPose.hpp  util.h
ImageLoader/CPU/ScanNet/: example.cpp  sensorData.cpp
ImageLoader/CPU/ScanNet/sensorData1/: stb_image_write.h
ImageLoader/include/ImageLoader/: ImageLoadFactory.h  ImageLoader.hpp
ImageLoader/src/: RIO.cpp  ScanNet.cpp  ScanNetPose.cpp  SceneNetRGBD.cpp
MainLib/: CMakeLists.txt  CPUInstantiations.cpp  CPUInstantiations_SC.cpp  CUDAInstantiations.cu  CUDAInstantiations_SC.cu  ITMLibDefines.h
MainLib/Core/: CMakeLists.txt  ITMMainEngine.h  ITMTrackingController.h
MainLib/Core/BasicSLAM/: CMakeLists.txt  CPUInstantiations.cpp  MainEngine.h  MainEngine.tpp
MainLib/Core/BasicSurfel/: CMakeLists.txt  CPUInstantiations.cpp  ITMBasicSurfelEngine.h  ITMBasicSurfelEngine.tpp
MainLib/Core/DenseMapper/: CMakeLists.txt  CPUInstantiations.cpp  ITMDenseMapper.h  ITMDenseMapper.tpp
MainLib/Core/DenseSurfelMapper/: CMakeLists.txt  CPUInstantiations.cpp  ITMDenseSurfelMapper.h  ITMDenseSurfelMapper.tpp
MainLib/Core/SceneCompletion/: CMakeLists.txt  CPUInstantiations.cpp  DenseCRFOptimization.h  SceneCompletion.h  SceneCompletion.tpp
MainLib/Engines/: CMakeLists.txt
MainLib/Engines/LowLevel/: CMakeLists.txt  ITMLowLevelEngineFactory.h
MainLib/Engines/LowLevel/CPU/: ITMLowLevelEngine_CPU.cpp  ITMLowLevelEngine_CPU.h
MainLib/Engines/LowLevel/CUDA/: ITMLowLevelEngine_CUDA.cu  (+1 more)
MainLib/Engines/Meshing/: CMakeLists.txt  CPUInstantiations.cpp  CUDAInstantiations.cu  ITMMeshingEngineFactory.h  MeshEngine.h  MeshEngine.tpp
MainLib/Engines/PointExtraction/: CMakeLists.txt  CPUInstantiations.cpp  CUDAInstantiations.cu  PointCloudEngine.h  PointCloudEngine.tpp  PointCloudExtractionEngineFactory.h
MainLib/Engines/Reconstruction/: CMakeLists.txt  CPUSurfelInstantiations.cpp  CPUVoxelInstantiations.cpp  CUDASurfelInstantiations.cu  CUDAVoxelInstantiations.cu  ITMSceneReconstructionEngineFactory.h
MainLib/Engines/SceneCompletion/: CMakeLists.txt  CUDAInstantiations.cu  FusionPolicies.h  SceneCompletionEngineFactory.h
MainLib/Engines/Swapping/: CMakeLists.txt  CPUInstantiations.cpp  CUDAInstantiations.cu  ITMSwappingEngineFactory.h
MainLib/Engines/ViewBuilding/: CMakeLists.txt  ITMViewBuilderFactory.cpp  ITMViewBuilderFactory.h
MainLib/Engines/Visualisation/: CMakeLists.txt  CPUSurfelInstantiations.cpp  CPUVoxelInstantiations.cpp  CUDASurfelInstantiations.cu  CUDAVoxelInstantiations.cu
MainLib/MainEngine/: CMakeLists.txt
MainLib/MainEngine/SCFusion/: CMakeLists.txt  SLAM.cpp  SLAM.h
MainLib/MainEngine/SLAM_base/: CMakeLists.txt  SLAM.cpp  SLAM.h
MainLib/Objects/Camera/: ITMCalibIO.cpp  ITMCalibIO.h  ITMDistortionCalib.h  ITMIntrinsics.h  ITMRGBDCalib.h
MainLib/Objects/Meshing/: ITMMesh.h
MainLib/Objects/Misc/: ITMIMUCalibrator.h  ITMPointCloud.h
MainLib/Objects/PointCloud/: PointCloud.h
MainLib/Objects/RenderStates/: ITMRenderState.h  ITMRenderState_VH.h  ITMSurfelRenderState.cpp  ITMSurfelRenderState.h
MainLib/Objects/Scene/: DistanceField_shared.h  ITMGlobalCache.h  ITMLocalVBA.h  ITMMultiSceneAccess.h  ITMPlainVoxelArray.h  ITMRepresentationAccess.h  ITMScene.h  ITMSurfelScene.h  ITMSurfelTypes.h  ITMVoxelBlockHash.h  ITMVoxelTypes.h  IntegratePolicies.h  PlainVolume.h  SCPlainVoxelArray.h  VoxelIndexInterface.h
MainLib/Objects/SceneCompletion/: SceneCompletionBuffer.h
MainLib/Objects/Tracking/: ITMDepthHierarchyLevel.h  ITMImageHierarchy.h  ITMIntensityHierarchyLevel.h  ITMSceneHierarchyLevel.h  ITMTemplatedHierarchyLevel.h  ITMTrackingState.h  ITMViewHierarchyLevel.h
MainLib/Objects/Views/: ITMView.h
MainLib/Trackers/: CMakeLists.txt  ITMTrackerFactory.h
MainLib/Trackers/CUDA/: ITMDepthTracker_CUDA.cu  ITMExtendedTracker_CUDA.cu
MainLib/Trackers/Interface/: ITMColorTracker.cpp  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMExtendedTracker.cpp  ITMExtendedTracker.h
MainLib/Trackers/Shared/: ITMDepthTracker_Shared.h
MainLib/Utils/: CPFIO.h  CUDAStreamHandler.hpp  Exceptions.h  ITMCUDAUtils.h  ITMImageTypes.h  ITMLibSettings.cpp  ITMLibSettings.h  ITMMath.h  ITMPixelUtils.h  ITMProjectionUtils.h  ITMSceneParams.h  InSegIO.h  LibSettingsIO.cpp  LibSettingsIO.h  SceneCompletionParams.h  ThreadUnit.hpp
SLAMWrapper/: CMakeLists.txt  gui_kernel.cu
SLAMWrapper/include/SLAMGUI/: GUI_SCSLAM.hpp  GUI_SCSLAM.tpp  GUI_SLAM.hpp  GUI_SLAM.tpp  GUI_SurfelSLAM.hpp  GUI_SurfelSLAM.tpp  gui_kernel.hpp
SLAMWrapper/include/SLAMTools/: EvaluationHelper.h  Parser.hpp  SLAMWrapper.h
(+106 files in other folders)
