#IF(BUILD_DATAGENERATOR)
#  ADD_SUBDIRECTORY(SyntheticDatasetGenerator)
#  ADD_SUBDIRECTORY(ModelTextureViewer)
#ENDIF(BUILD_DATAGENERATOR)
#ADD_SUBDIRECTORY(SLAM)
#ADD_SUBDIRECTORY(GUI3D)

IF(BUILD_DATA_GENERATOR_SCANNET)
    #ADD_SUBDIRECTORY(Scan2CADCpp) # for checking unseen wnid and can_ids
ENDIF(BUILD_DATA_GENERATOR_SCANNET)

IF(BUILD_TRAININGDATA_GENERATOR)
    ADD_SUBDIRECTORY(rotation)
    ADD_SUBDIRECTORY(TrainingDataGenerator)
ENDIF(BUILD_TRAININGDATA_GENERATOR)

ADD_SUBDIRECTORY(Map2Mesh)
ADD_SUBDIRECTORY(SCFusion)


IF(BUILD_DATA_GENERATOR)
    ADD_SUBDIRECTORY(extractPoseFromScanNet)
    ADD_SUBDIRECTORY(rotation)
    ADD_SUBDIRECTORY(TrainingDataGenerator)
ENDIF(BUILD_DATA_GENERATOR)


